--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -31,6 +31,11 @@
 	font-weight: bold !important;
 }
 
+.green {
+	color: #42b72a !important;
+	font-weight: bold !important;
+}
+
 .user {
 	padding: 10px;
 	display: flex;
